@@ -6,13 +6,13 @@
 # few of the options below.
 # By default, it will link against glib-2.x. If you want to
 # build against glib-1.2.x instead, run:  make GLIB1=yes
+#
+# if you want debug symbols compiled in ( -g ), run with
+# make DEBUG=yes
 
 HOST_OS:=$(shell uname|sed -e s/_.*//|tr '[:upper:]' '[:lower:]')
 
 CC ?= gcc
-ifeq ($(CC),)
-CC := gcc
-endif
 AR ?= ar
 RANLIB ?= ranlib
 
@@ -36,9 +36,13 @@ CFLAGS  =
 LDFLAGS =
 INCLUDES= -I. -I./libedsio
 
-CFLAGS += $(CPUFLAGS) -O2 -Wall
+ifdef DEBUG
+CFLAGS += $(CPUFLAGS) -g -Wall -DDEBUG=1
+else
+CFLAGS += $(CPUFLAGS) -O2 -Wall -DNDEBUG
+endif
 
-ifdef GLIB1
+ifeq ($(GLIB1),yes)
 CPPFLAGS += -D_XD_USE_GLIB1
 GLIB_CFLAGS=$(shell glib-config --cflags)
 GLIB_LIBS=$(shell glib-config --libs)
